--- a/client.jade
+++ b/client.jade
@@ -4,8 +4,17 @@ html
     meta(charset="utf-8")
     meta(name="viewport",content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no,minimal-ui")
     meta(name="description",content='hiphop video title generator')
+    meta(name="apple-mobile-web-app-capable",content="yes")
     link(href='',rel='stylesheet',type='text/css')
     title H V T G
     script(type="text/javascript",src='client.js')
+    link(rel="apple-touch-icon" sizes="x")
+    link(href="apple-touch-icon-57x57.png",rel="apple-touch-icon",sizes="57x57")
+    link(href="apple-touch-icon-72x72.png",rel="apple-touch-icon",sizes="72x72")
+    link(href="apple-touch-icon-76x76.png",rel="apple-touch-icon",sizes="76x76")
+    link(href="apple-touch-icon-114x114.png",rel="apple-touch-icon",sizes="114x114")
+    link(href="apple-touch-icon-120x120.png",rel="apple-touch-icon",sizes="120x120")
+    link(href="apple-touch-icon-144x144.png",rel="apple-touch-icon",sizes="144x144")
+    link(href="apple-touch-icon-152x152.png",rel="apple-touch-icon",sizes="152x152")
   body
     #client
